clusters/home/apps/media/sonarr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    hajimari.io/icon: material-symbols:tv-gen-sharp
    hajimari.io/enable: true
    hajimari.io/appName: "Sonarr"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: sonarr.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-svc
            port:
              number: 80
  tls:
  - hosts: 
    - sonarr.${SECRET_LOCAL_DOMAIN}
    secretName: sonarr-ingress-certs
